<resources>
    <string name="app_name">DAURM</string>
    <string name="todo">TODO</string>
    <string name="login_as">Login as</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="ts_blur">s_blur</string>
    <string name="login_as_student">Login as Student</string>
    <string name="lroll_number">Roll number</string>
    <string name="slpassword">Password</string>
    <string name="s_submit">Submit</string>
    <string name="s_dont_have_account">Dont have account?</string>
    <string name="s_sign_up">Sign up</string>
    <string name="s_student_registration">Student Registration</string>
    <string name="ss_fullname">Fullname</string>
    <string name="ss_roll_number">Roll Number</string>
    <string name="ss_password">Password</string>
    <string name="ss_confirm_password">Confirm Password</string>
    <string name="s_it">IT</string>
    <string name="s_cs">CS</string>
    <string name="s_se">SE</string>
    <string name="ss_submit">Submit</string>
    <string name="t_blur">t_blur</string>
    <string name="l_login_as_teacher">Login as Teacher</string>
    <string name="ts_email">Email</string>
    <string name="tl_password">Password</string>
    <string name="tl_login">Login</string>
    <string name="tl_dont_have_account">Dont have account?</string>
    <string name="ts_sign_up">Sign up</string>
    <string name="t_welcome">Welcome</string>
    <string name="t_time_table">Time Table</string>
    <string name="t_ongoing_session">Ongoing Session</string>
    <string name="t_settings">Settings</string>
    <string name="t_control">Control</string>
    <string name="slot">Slot :</string>
    <string name="department">Department :</string>
    <string name="instructor">Instructor :</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
</resources>
