<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6A576C"
    tools:context=".lock_control">

    <TextView
        android:id="@+id/textViewone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="72dp"
        android:text="@string/slot"
        android:layout_alignParentLeft="true"
        android:textColor="#C9FBFA"
        android:textSize="22sp"
        android:layout_marginLeft="50dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textViewone"
        android:layout_marginTop="108dp"
        android:text="@string/department"
        android:textColor="#C9FBFA"
        android:textSize="22sp"
        android:layout_alignLeft="@+id/textViewone" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textViewone"
        android:layout_marginTop="147dp"
        android:text="@string/instructor"
        android:textColor="#C9FBFA"
        android:textSize="22sp"
        android:layout_alignLeft="@+id/textViewone" />

    <Button
        android:id="@+id/lock_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="213dp"
        android:background="@drawable/custom_button"
        android:drawableLeft="@drawable/ic_lock_icon"
        android:text="@string/lock"
        android:textSize="18sp"
        android:textStyle="bold"
        android:drawableStart="@drawable/ic_lock_icon" />

    <Button
        android:id="@+id/unlock_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="151dp"
        android:background="@drawable/custom_button"
        android:drawableLeft="@drawable/ic_unlock_icon"
        android:text="@string/unlock"
        android:textSize="18sp"
        android:textStyle="bold"
        android:drawableStart="@drawable/ic_unlock_icon" />

</RelativeLayout>